--- a/src/app/Pages/book-your-ticket/book-your-ticket.component.html
+++ b/src/app/Pages/book-your-ticket/book-your-ticket.component.html
@@ -4,7 +4,7 @@
     <div class="col-22">
       <!-- Booking Content Goes Here-->
       <div class="row my-5">
-        <div class="col-8">
+        <div class="col-24 col-md-24 col-lg-8">
           <div class="container">
             <img src="assets/movie.jpg" />
             <div class="mt-4">
@@ -44,9 +44,9 @@
             </div>
           </div>
         </div>
-        <div class="col-16">
-          <div class="container">
-            <div class="input-collection d-flex justify-content-around">
+        <div class="col-24 col-md-24 col-lg-16">
+          <div class="container w-100">
+            <div class="input-collection d-flex justify-content-around mt-5 mt-md-5 mt-lg-0">
               <div>
                 <mat-form-field>
                   <mat-label>Cinema :</mat-label>
@@ -111,8 +111,8 @@
               </div>
               <div class="seats">
                 <div class="row-seats-1 d-flex">
-                  @for (seat of firstRow; track firstRow) { @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  @for (seat of firstRow; track firstRow;let i =$index) { @if(!seat.isTaken){
+                  <div class="seat text-center"  (click)="getSeat(seat, $event,i)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -122,7 +122,7 @@
                 <div class="row-seats-2 d-flex">
                   @for (seat of secondRow; track secondRow) {
                   @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -131,7 +131,7 @@
                 </div>
                 <div class="row-seats-3 d-flex">
                   @for (seat of thirdRow; track thirdRow) { @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -141,7 +141,7 @@
                 <div class="row-seats-4 d-flex">
                   @for (seat of fourthRow; track fourthRow) {
                   @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -150,7 +150,7 @@
                 </div>
                 <div class="row-seats-5 d-flex">
                   @for (seat of fifthRow; track fifthRow) { @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -158,8 +158,9 @@
                   } }
                 </div>
                 <div class="row-seats-6 d-flex">
-                  @for (seat of sixth; track sixth;let i = $index) { @if(!seat.isTaken){
-                  <div class="seat text-center"    (click)="getSeat(seat,$event)">
+                  @for (seat of sixth; track sixth;let i = $index) {
+                  @if(!seat.isTaken){
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -168,7 +169,7 @@
                 </div>
                 <div class="row-seats-7 d-flex">
                   @for (seat of siventh; track siventh) { @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -177,7 +178,7 @@
                 </div>
                 <div class="row-seats-8 d-flex">
                   @for (seat of eight; track eight) { @if(!seat.isTaken){
-                  <div class="seat text-center" (click)="getSeat(seat,$event)">
+                  <div class="seat text-center" (click)="getSeat(seat, $event)">
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -185,16 +186,18 @@
                   } }
                 </div>
               </div>
-              <div class="checkout-container d-flex">
-                <div class="tickets w-50 p-4">
+              <div class="checkout-container d-flex flex-column flex-md-row  d-md-flex mt-5 mt-md-0">
+                <div class="tickets  mt-md-0  w-100 w-md-50 p-4">
                   @if(tickets===0){ Tickets , Row }@else{
                   {{ tickets }}: Tickets , Row {{ rows }}
                   }
                 </div>
-                <div class="totla-price w-25 p-4">
+                <div class="totla-price mt-5 mt-md-0  w-100 w-md-25 p-4">
                   Totlaprice :{{ totalPrice }} L.E
                 </div>
-                <div class="checkout w-25 p-4">Checkout</div>
+                <div class="d-flex  justify-content-center align-items-center   w-md-25">
+                  <div class="checkout  mt-md-0 col-12 col-md-24  p-4 ">Checkout</div>
+                </div>
               </div>
             </div>
           </div>
