--- a/src/app/Components/hero/hero.component.scss
+++ b/src/app/Components/hero/hero.component.scss
@@ -1,7 +1,7 @@
 .bg-img {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.65);
   z-index: 1;
 }
