--- a/src/app/Pages/book-your-ticket/book-your-ticket.component.html
+++ b/src/app/Pages/book-your-ticket/book-your-ticket.component.html
@@ -46,7 +46,9 @@
         </div>
         <div class="col-24 col-md-24 col-lg-16">
           <div class="container w-100">
-            <div class="input-collection d-flex justify-content-around mt-5 mt-md-5 mt-lg-0">
+            <div
+              class="input-collection d-flex justify-content-around gap-lg-2 mt-5 mt-md-5 mt-lg-0"
+            >
               <div>
                 <mat-form-field>
                   <mat-label>Cinema :</mat-label>
@@ -111,8 +113,12 @@
               </div>
               <div class="seats">
                 <div class="row-seats-1 d-flex">
-                  @for (seat of firstRow; track firstRow;let i =$index) { @if(!seat.isTaken){
-                  <div class="seat text-center"  (click)="getSeat(seat, $event,i)">
+                  @for (seat of firstRow; track firstRow;let i =$index) {
+                  @if(!seat.isTaken){
+                  <div
+                    class="seat text-center"
+                    (click)="getSeat(seat, $event, i)"
+                  >
                     {{ seat.num }}
                   </div>
                   } @if(seat.isTaken){
@@ -186,17 +192,23 @@
                   } }
                 </div>
               </div>
-              <div class="checkout-container d-flex flex-column flex-md-row  d-md-flex mt-5 mt-md-0">
-                <div class="tickets  mt-md-0  w-100 w-md-50 p-4">
+              <div
+                class="checkout-container d-flex flex-column flex-md-row d-md-flex mt-5 mt-md-0"
+              >
+                <div class="tickets mt-md-0 w-100 w-md-50 p-4">
                   @if(tickets===0){ Tickets , Row }@else{
                   {{ tickets }}: Tickets , Row {{ rows }}
                   }
                 </div>
-                <div class="totla-price mt-5 mt-md-0  w-100 w-md-25 p-4">
+                <div class="totla-price mt-5 mt-md-0 w-100 w-md-25 p-4">
                   Totlaprice :{{ totalPrice }} L.E
                 </div>
-                <div class="d-flex  justify-content-center align-items-center   w-md-25">
-                  <div class="checkout  mt-md-0 col-12 col-md-24  p-4 ">Checkout</div>
+                <div
+                  class="d-flex justify-content-center align-items-center w-md-25"
+                >
+                  <div class="checkout mt-md-0 col-12 col-md-24 p-4">
+                    Checkout
+                  </div>
                 </div>
               </div>
             </div>
