--- a/src/app/Pages/book-your-ticket/book-your-ticket.component.html
+++ b/src/app/Pages/book-your-ticket/book-your-ticket.component.html
@@ -201,12 +201,15 @@
                   }
                 </div>
                 <div class="totla-price mt-5 mt-md-0 w-100 w-md-25 p-4">
-                  Totlaprice :{{ totalPrice }} L.E
+                  Total Price : {{ totalPrice }} L.E
                 </div>
                 <div
                   class="d-flex justify-content-center align-items-center w-md-25"
                 >
-                  <div class="checkout mt-md-0 col-12 col-md-24 p-4">
+                  <div
+                    routerLink="/checkout"
+                    class="checkout primary-btn mt-md-0 col-12 col-md-24"
+                  >
                     Checkout
                   </div>
                 </div>
