style: :art: Update hero + navbar styling

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -11,7 +11,10 @@
           <div class="col-24">
             <div class="movies-title" id="Movies">
               <h3>Movies</h3>
-              <app-filter></app-filter>
+
+              <div class="filter-container">
+                <app-filter></app-filter>
+              </div>
             </div>
           </div>
         </div>
