--- a/src/app/Components/carousel/carousel.component.scss
+++ b/src/app/Components/carousel/carousel.component.scss
@@ -61,11 +61,13 @@ h3 {
   font-size: 3rem;
   font-weight: 800;
   color: #fdcc0d;
-  margin: 0 0 30px 30px;
+  margin: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-@media (max-width: "600px") {
+@media (max-width: 600px) {
   h3 {
     margin-bottom: 15px;
+    text-align: center;
   }
 }
