--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -7,11 +7,7 @@
         <p>Book now for an unforgettable movie experience</p>
         <p>Your ticket to cinematic delight awaits !</p>
 
-        <img
-          class="glasses"
-          src="/assets/3d.png"
-          alt="3d"
-        />
+        <img class="glasses" src="/assets/3d.png" alt="3d" loading="lazy" />
       </div>
     </div>
     <div class="col-24 col-md-11 mt-sm-4 d-flex justify-content-center">
@@ -19,6 +15,7 @@
         src="assets/img-footer.png"
         class="w-75 children"
         style="border-radius: 10px"
+        loading="lazy"
       />
     </div>
   </div>
@@ -101,7 +98,11 @@
 
   <div class="row my-5">
     <div class="col-8 col-md-8 d-flex justify-content-start d-md-block">
-      <img src="/assets/logo.png" style="width: 130px; height: 130px" />
+      <img
+        src="/assets/logo.png"
+        style="width: 130px; height: 130px"
+        loading="lazy"
+      />
     </div>
     <div
       class="col-13 col-md-8 d-flex justify-content-center align-items-center"
