--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -2,8 +2,8 @@
   <div class="content">
     <h1>Hello</h1>
     <p>
-      Discover the Magic of Cinema with I<span>WATCH</span>, Reserve Your Seat
-      for an Unforgettable Movie Night Adventure Today
+      Discover the Magic of Cinema with <span>I<span>WATCH</span></span
+      >, Reserve Your Seat for an Unforgettable Movie Night Adventure Today
     </p>
     <a href="#Movies" class="primary-btn">Reserve Now</a>
   </div>
