--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,25 +1,21 @@
-<div class="col-1"></div>
-<div class="col-22">
-  <nav [ngClass]="{ 'home-page': isHomePage }" class="navbar navbar-expand-lg">
-    <div class="logo-container">
-      <p class="logo"><span>I</span>Watch</p>
+<!-- <nav [ngClass]="{ 'home-page': isHomePage }"> -->
+<nav>
+  <div class="logo-container">
+    <p class="logo"><span>I</span>Watch</p>
 
-      <div class="search-box">
-        <input type="text" placeholder="Search..." />
-        <a href="#"><i class="search pi pi-search"></i></a>
-      </div>
+    <div class="search-box">
+      <input type="text" placeholder="Search..." />
+      <a href="#"><i class="search pi pi-search"></i></a>
     </div>
+  </div>
 
-    <div class="links">
-      <a routerLink="/">Home</a>
-      <a href="#Trending">Trending</a>
-      <a routerLink="/">Cart</a>
-    </div>
+  <div class="links">
+    <a routerLink="/">Home</a>
+    <a href="#Trending">Trending</a>
+    <a routerLink="/">Cart</a>
+  </div>
 
-    <div class="btns">
-      <button class="secondary-btn" routerLink="/sign-in">Sign In</button>
-      <button class="primary-btn" routerLink="/sign-up">Sign Up</button>
-    </div>
-  </nav>
-</div>
-<div class="col-1"></div>
+  <div class="btns">
+    <button class="primary-btn" routerLink="/sign-up">Login / Register</button>
+  </div>
+</nav>
