--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -1,24 +1,44 @@
 nav {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  align-items: center;
+  display: flex;
   justify-content: space-between;
-  gap: 20px;
-  margin: 22px 60px 0 60px;
-  width: 92%;
+  align-items: center;
   background-color: transparent;
+  width: 100%;
+  height: 80px;
+  position: sticky;
+  z-index: 1000;
+  padding: 0 40px;
 }
 
-// To make the navbar above image layer
-.home-page {
-  position: absolute;
-  z-index: 100;
-}
+// Conditional Class for Home Page Only
+// .home-page {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+// }
 
 .logo-container {
   display: flex;
   align-items: center;
   margin-top: 10px;
+}
+
+.logo {
+  font-size: 2.8rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  color: var(--color-var3);
+
+  span {
+    color: var(--color-var2);
+  }
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
 }
 
 .links a {
@@ -38,25 +58,6 @@ nav {
 .links a:active {
   border-bottom: 3px solid var(--color-var3);
   color: var(--color-var2);
-}
-
-.links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 20%;
-  gap: 40px;
-}
-
-.logo {
-  font-size: 3rem;
-  font-weight: 800;
-  letter-spacing: 1px;
-  color: var(--color-var3);
-}
-
-.logo span {
-  color: white;
 }
 
 .search-box a {
@@ -122,81 +123,36 @@ button {
   width: auto;
 }
 
-@media (max-width: 1224px) {
-  nav {
-    margin: 22px 40px 0 40px;
-  }
-
-  .search-box:hover input,
-  .search-box input:not(:placeholder-shown) {
-    width: 130px;
-  }
-
-  .search-box {
-    margin-left: 1rem;
-  }
-
-  .links {
-    width: 30%;
-  }
-
-  .logo {
-    font-size: 2.5rem;
-  }
-
-  .btns button {
-    font-size: 14px;
-  }
-}
-
 @media (max-width: 1024px) {
-  nav {
-    margin: 22px 20px 0 20px;
-  }
-
-  .search-box:hover input,
-  .search-box input:not(:placeholder-shown) {
-    width: 100px;
-  }
-
   .links {
-    width: 40%;
     gap: 20px;
   }
 
-  .btns button {
-    font-size: 12px;
+  .search-box:hover input,
+  .search-box input:not(:placeholder-shown) {
+    width: 150px;
+    font-size: 1.3rem;
   }
 }
 
 @media (max-width: 768px) {
-  nav {
-    margin: 22px 10px 0 10px;
-  }
-
-  .search-box {
-    margin-left: 0.5rem;
+  .links {
+    display: none;
   }
 
   .search-box:hover input,
   .search-box input:not(:placeholder-shown) {
-    width: 80px;
+    width: 150px;
+    font-size: 1.3rem;
   }
 
-  .links {
-    width: 50%;
-    gap: 10px;
+  .search-box {
+    margin-left: 0.2rem;
   }
+}
 
-  .links a {
-    font-size: 1.5rem;
-  }
-
+@media (max-width: 425px) {
   .logo {
     font-size: 2rem;
-  }
-
-  .btns button {
-    font-size: 10px;
   }
 }
