--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -8,6 +8,7 @@ nav {
   position: sticky;
   z-index: 1000;
   padding: 0 40px;
+  position: relative;
 }
 
 // Conditional Class for Home Page Only
@@ -39,6 +40,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   gap: 50px;
+  padding-left: 54px;
 }
 
 .links a {
@@ -65,7 +67,10 @@ nav {
   color: black;
 }
 
+// Using absolute position to prevent the search box animation from affecting the links container movement
 .search-box {
+  position: absolute;
+  left: 9.7%;
   height: 30px;
   display: flex;
   cursor: pointer;
@@ -78,10 +83,16 @@ nav {
   margin-left: 2rem;
 }
 
-.search-box:hover input,
-.search-box input:not(:placeholder-shown) {
-  width: 220px;
-  font-size: 1.3rem;
+@media (max-width: 1024px) {
+  .search-box {
+    left: 14%;
+  }
+}
+
+@media (max-width: 768px) {
+  .search-box {
+    left: 21%;
+  }
 }
 
 .search-box input {
@@ -90,6 +101,12 @@ nav {
   background: transparent;
   width: 0;
   transition: width 0.4s ease;
+}
+
+.search-box:hover input,
+.search-box input:not(:placeholder-shown) {
+  width: 220px;
+  font-size: 1.3rem;
 }
 
 .search-box i {
