style: :art: Improve navbar

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   <div class="links">
     <a routerLink="/">Home</a>
     <a href="#Trending">Trending</a>
-    <a routerLink="/">Cart</a>
+    <a routerLink="/checkout">Cart</a>
   </div>
 
   <div class="btns">
