refactor: :recycle: Add routerLinkActive

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -10,9 +10,9 @@
   </div>
 
   <div class="links">
-    <a routerLink="/">Home</a>
+    <a routerActiveLink="active" routerLink="/">Home</a>
     <a href="#Trending">Trending</a>
-    <a routerLink="/checkout">Cart</a>
+    <a routerActiveLink="active" routerLink="/checkout">Cart</a>
   </div>
 
   <div class="btns">
