--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -5,6 +5,8 @@
       Discover the Magic of Cinema with <span>I<span>WATCH</span></span
       >, Reserve Your Seat for an Unforgettable Movie Night Adventure Today
     </p>
-    <a href="#Movies" class="primary-btn">Reserve Now</a>
+    <button class="primary-btn">
+      <a href="#Movies">Reserve Now</a>
+    </button>
   </div>
 </div>
