--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -16,6 +16,12 @@
   </div>
 
   <div class="btns">
-    <button class="primary-btn" routerLink="/sign-up">Login / Register</button>
+    <button class="primary-btn" routerLink="/sign-up">
+      Login / Register
+      <img
+        src="./assets/user.svg"
+        style="filter: invert(100%); padding-bottom: 4px"
+      />
+    </button>
   </div>
 </nav>
