feat: :art: Add filter component

--- a/src/app/Components/movies-cards/movies-cards.component.scss
+++ b/src/app/Components/movies-cards/movies-cards.component.scss
@@ -72,9 +72,9 @@
       left: 5%;
     }
 
-    img {
-      transform: translateY(-15px);
-    }
+    // img {
+    //   transform: translateY(-15px);
+    // }
 
     .cards--one__rect {
       top: 75%;
