--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -11,19 +11,21 @@
           <div class="col-24">
             <div class="movies-title" id="Movies">
               <h3>Movies</h3>
-              <app-filter></app-filter>
+              <app-filter (myEvent)="getSelectedCatg($event)"></app-filter>
             </div>
           </div>
         </div>
 
         <div class="row">
           <div class="wrapper">
-            @for (movie of movies?.slice(1,27); track movie.id) {
+            @for (movie of filterdMovies; track movie.id) {
             <app-movies-cards [movie]="movie"></app-movies-cards>
+
             }
           </div>
         </div>
       </div>
+
       <div class="moviesCarousel">
         <div class="row">
           <div class="col-24">
