--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -5,8 +5,31 @@
       <p class="logo"><span>I</span>Watch</p>
 
       <div class="search-box">
-        <input type="text" placeholder="Search..." />
+        <input
+          type="text"
+          placeholder="Search..."
+          [(ngModel)]="item"
+          (input)="result($event)"
+          id="targetDiv"
+          #targetDiv
+        />
         <a href="#"><i class="search pi pi-search"></i></a>
+        @if (resultMovies.length!=0 &&showResults) {
+        <div class="mySearch">
+          @for (movie of resultMovies; track movie.id) {
+          <div class="singleRes" routerLink="movie/{{ movie.id }}">
+            <div class="poster">
+              <img src="{{ movie.Poster }}" />
+            </div>
+            <div class="content">
+              <div class="name">{{ movie.Title }}</div>
+              <div class="catg">{{ movie.Genre }}</div>
+              <div class="catg">{{ movie.Language }}</div>
+            </div>
+          </div>
+          }
+        </div>
+        }
       </div>
     </div>
 
