style: :zap: Edit navbar

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
           (input)="result($event)"
           id="targetDiv"
           #targetDiv
+          autocomplete="off"
         />
         <a href="#"><i class="search pi pi-search"></i></a>
         @if (resultMovies.length!=0 &&showResults) {
