--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -42,7 +42,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   gap: 50px;
-  padding-left: 54px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .links a {
@@ -98,8 +100,6 @@ nav {
 
 // Using absolute position to prevent the search box animation from affecting the links container movement
 .search-box {
-  position: absolute;
-  left: 9.7%;
   height: 30px;
   display: flex;
   cursor: pointer;
@@ -111,18 +111,6 @@ nav {
   margin-bottom: 22px;
   margin-left: 2rem;
   position: relative;
-}
-
-@media (max-width: 1024px) {
-  .search-box {
-    left: 14%;
-  }
-}
-
-@media (max-width: 768px) {
-  .search-box {
-    left: 21%;
-  }
 }
 
 .search-box input {
@@ -207,36 +195,38 @@ button {
       }
     }
 
-@media (max-width: 1024px) {
-  .links {
-    gap: 20px;
-  }
+    @media (max-width: 1024px) {
+      .links {
+        gap: 20px;
+      }
 
-  .search-box:hover input,
-  .search-box input:not(:placeholder-shown) {
-    width: 150px;
-    font-size: 1.3rem;
-  }
-}
+      .search-box:hover input,
+      .search-box input:not(:placeholder-shown) {
+        width: 150px;
+        font-size: 1.3rem;
+      }
+    }
 
-@media (max-width: 768px) {
-  .links {
-    display: none;
-  }
+    @media (max-width: 768px) {
+      .links {
+        display: none;
+      }
 
-  .search-box:hover input,
-  .search-box input:not(:placeholder-shown) {
-    width: 150px;
-    font-size: 1.3rem;
-  }
+      .search-box:hover input,
+      .search-box input:not(:placeholder-shown) {
+        width: 150px;
+        font-size: 1.3rem;
+      }
 
-  .search-box {
-    margin-left: 0.2rem;
-  }
-}
+      .search-box {
+        margin-left: 0.2rem;
+      }
+    }
 
-@media (max-width: 425px) {
-  .logo {
-    font-size: 2rem;
+    @media (max-width: 425px) {
+      .logo {
+        font-size: 2rem;
+      }
+    }
   }
 }
