--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -2,12 +2,12 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: transparent;
   width: 100%;
-  height: 80px;
+  // height: 80px;
   position: sticky;
   z-index: 1000;
   padding: 0 40px;
+  margin-top: 10px;
 
   // relative for search box
   position: relative;
