--- a/src/app/Pages/book-your-ticket/book-your-ticket.component.scss
+++ b/src/app/Pages/book-your-ticket/book-your-ticket.component.scss
@@ -94,7 +94,9 @@
   align-items: center;
   border-radius: 5px;
 }
-
+.p-icon {
+  color: #fdcc0d;
+}
 // Extra Small
 @media only screen and (max-width: 600px) {
   .seat {
