--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -83,16 +83,16 @@
 
       <button
         class="btn-test py-2 px-3 text-white"
+        type="button"
         pButton
         pRipple
         (click)="showBottomRight()"
+        label="Bottom Right"
       >
         Subscribe
       </button>
 
-      <!-- @if(showToast) {
-        <p-toast position="bottom-right" key="br"></p-toast>
-      } -->
+      <p-toast position="bottom-right" key="bc"></p-toast>
     </div>
   </div>
 
@@ -127,29 +127,5 @@
       </div>
     </div>
     <div class="col-8"></div>
-  </div>
-
-  <!-- Bootstrap Toast -->
-  <div class="toast-container position-fixed bottom-0 end-0 p-3">
-    <div
-      id="liveToast"
-      class="toast"
-      role="alert"
-      aria-live="assertive"
-      aria-atomic="true"
-    >
-      <div class="toast-header">
-        <img src="..." class="rounded me-2" alt="..." />
-        <strong class="me-auto">Bootstrap</strong>
-        <small>11 mins ago</small>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="toast"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="toast-body">Hello, world! This is a toast message.</div>
-    </div>
   </div>
 </div>
