refactor: :truck: Move & Rename resources

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -7,12 +7,17 @@
         <p>Book now for an unforgettable movie experience</p>
         <p>Your ticket to cinematic delight awaits !</p>
 
-        <img class="glasses" src="/assets/3d.png" alt="3d" loading="lazy" />
+        <img
+          class="glasses"
+          src="/assets/images/3d.png"
+          alt="3d"
+          loading="lazy"
+        />
       </div>
     </div>
     <div class="col-24 col-md-11 mt-sm-4 d-flex justify-content-center">
       <img
-        src="assets/img-footer.png"
+        src="assets/images/img-footer.png"
         class="w-75 children"
         style="border-radius: 10px"
         loading="lazy"
@@ -107,7 +112,7 @@
   <div class="row my-5">
     <div class="col-8 col-md-8 d-flex justify-content-start d-md-block">
       <img
-        src="/assets/logo.png"
+        src="/assets/images/logo.png"
         style="width: 130px; height: 130px"
         loading="lazy"
       />
