--- a/src/app/Components/hero/hero.component.scss
+++ b/src/app/Components/hero/hero.component.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url("/assets/hero.jpg");
+  background-image: url("/assets/images/hero.jpg");
   display: grid;
   place-items: center;
 
