--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -42,7 +42,7 @@
     <button class="primary-btn" routerLink="/sign-up">
       Login / Register
       <img
-        src="./assets/user.svg"
+        src="./assets/svg/user.svg"
         style="filter: invert(100%); padding-bottom: 4px"
       />
     </button>
