--- a/src/app/Pages/booking/booking.component.html
+++ b/src/app/Pages/booking/booking.component.html
@@ -7,7 +7,7 @@
         <div class="col-24 col-md-24 col-lg-8">
           <div class="container">
             <img
-              src="assets/movie.jpg"
+              src="assets/images/movie.jpg"
               width="400"
               height="450"
               style="
