--- a/src/app/Pages/sign-in/sign-in.component.scss
+++ b/src/app/Pages/sign-in/sign-in.component.scss
@@ -1,5 +1,5 @@
 .parent {
-  background-image: url("/assets/sign-up.jpg");
+  background-image: url("/assets/images/sign-up.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
