--- a/src/app/Pages/sign-up/sign-up.component.html
+++ b/src/app/Pages/sign-up/sign-up.component.html
@@ -3,7 +3,12 @@
     <div class="first-column">
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
         <div class="logo">
-          <img src="/assets/logo.png" alt="logo" width="130" height="130" />
+          <img
+            src="/assets/images/logo.png"
+            alt="logo"
+            width="130"
+            height="130"
+          />
         </div>
 
         <h1>Create New Account</h1>
@@ -59,13 +64,13 @@
             <label>Password</label>
 
             <img
-              src="assets/eye-off.svg"
+              src="assets/svg/eye-off.svg"
               style="filter: invert(100%); cursor: pointer"
               (click)="togglePasswordVisibility(passwordInput)"
               [hidden]="showPassword"
             />
             <img
-              src="assets/eye.svg"
+              src="assets/svg/eye.svg"
               style="filter: invert(100%); cursor: pointer"
               (click)="togglePasswordVisibility(passwordInput)"
               [hidden]="!showPassword"
@@ -94,13 +99,13 @@
             <label>Confirm Password</label>
 
             <img
-              src="assets/eye-off.svg"
+              src="assets/svg/eye-off.svg"
               style="filter: invert(100%); cursor: pointer"
               (click)="toggleConfirmPasswordVisibility(confirmPasswordInput)"
               [hidden]="showConfirmPassword"
             />
             <img
-              src="assets/eye.svg"
+              src="assets/svg/eye.svg"
               style="filter: invert(100%); cursor: pointer"
               (click)="toggleConfirmPasswordVisibility(confirmPasswordInput)"
               [hidden]="!showConfirmPassword"
@@ -130,7 +135,7 @@
     </div>
 
     <div class="second-column">
-      <img src="assets/sign-up-img.svg" class="intro-img" alt="intro" />
+      <img src="assets/svg/sign-up-img.svg" class="intro-img" alt="intro" />
     </div>
   </div>
 </div>
