--- a/src/app/Components/checkout/checkout.component.html
+++ b/src/app/Components/checkout/checkout.component.html
@@ -2,7 +2,7 @@
   <div class="cart-section">
     <div class="cart-header">
       <img
-        src="/assets/cart.svg"
+        src="/assets/svg/cart.svg"
         alt="checkout"
         width="30"
         height="30"
@@ -52,7 +52,11 @@
     }
 
     <div class="back-container" [routerLink]="'/booking'">
-      <img src="/assets/back.svg" alt="arrow" style="filter: invert(100%)" />
+      <img
+        src="/assets/svg/back.svg"
+        alt="arrow"
+        style="filter: invert(100%)"
+      />
       <h3>Need More Seats ?</h3>
     </div>
     }
@@ -61,7 +65,7 @@
   <div class="payment">
     <div class="cart-header" style="margin-bottom: 20px">
       <img
-        src="/assets/credit.svg"
+        src="/assets/svg/credit.svg"
         alt="checkout"
         width="30"
         height="30"
@@ -80,7 +84,12 @@
           [(ngModel)]="paymentOption"
         />
         <label for="paypal">
-          <img src="/assets/paypal.png" width="30" height="30" alt="Paypal" />
+          <img
+            src="/assets/images/paypal.png"
+            width="30"
+            height="30"
+            alt="Paypal"
+          />
           Paypal
         </label>
       </div>
@@ -95,7 +104,7 @@
         />
         <label for="credit">
           <img
-            src="/assets/master.png"
+            src="/assets/images/master.png"
             width="30"
             height="25"
             alt="Credit Card"
@@ -107,7 +116,7 @@
       @if(paymentOption === 'paypal'){
       <div class="paypal" style="display: flex; justify-content: center">
         <img
-          src="/assets/paypal-img.svg"
+          src="/assets/svg/paypal-img.svg"
           width="250"
           height="250"
           alt="Paypal"
@@ -118,7 +127,7 @@
       } @if(paymentOption === 'credit'){
       <div class="paypal" style="display: flex; justify-content: center">
         <img
-          src="/assets/credit-img.svg"
+          src="/assets/svg/credit-img.svg"
           width="250"
           height="250"
           alt="Paypal"
