--- a/src/app/Pages/error/error.component.html
+++ b/src/app/Pages/error/error.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img src="assets/error.svg" class="intro-img" alt="intro" />
+  <img src="assets/svg/error.svg" class="intro-img" alt="intro" />
 
   <h1>Page Not Found</h1>
 </div>
