feat: :sparkles: Add google login + render user info

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -13,6 +13,7 @@
         autocomplete="off"
       />
       <a href="#"><i class="search pi pi-search"></i></a>
+
       @if (resultMovies.length!=0 &&showResults) {
       <div class="mySearch">
         @for (movie of resultMovies; track movie.id) {
@@ -76,10 +77,31 @@
     </div>
 
     <div class="mob-btns">
-      <button class="reg-btn" routerLink="/sign-up">
-        <img src="./assets/user.svg" style="padding-bottom: 4px" />
-        Login / Register
+      @if(googleUser) {
+      <div class="google-info">
+        <img [src]="googlePicture" routerLink="/profile" />
+
+        <button class="secondary-btn" (click)="handleSignOut()">
+          Sign Out
+        </button>
+      </div>
+      } @else if(mongoUser) {
+      <div class="google-info">
+        <p style="cursor: pointer" routerLink="/profile">{{ mongoEmail }}</p>
+
+        <button class="secondary-btn" (click)="handleSignOut()">
+          Sign Out
+        </button>
+      </div>
+      } @else {
+      <button class="primary-btn" routerLink="/sign-in">
+        <img
+          src="./assets/svg/user.svg"
+          style="filter: invert(100%); padding-bottom: 4px"
+        />
+        Sign In
       </button>
+      }
     </div>
   </p-sidebar>
 
@@ -97,71 +119,26 @@
   </div>
 
   <div class="btns">
-    <button class="primary-btn reg-btn" routerLink="/sign-up">
-      Login / Register
+    @if(googleUser) {
+    <div class="google-info">
+      <img [src]="googlePicture" routerLink="/profile" />
+
+      <button class="secondary-btn" (click)="handleSignOut()">Sign Out</button>
+    </div>
+    } @else if(mongoUser) {
+    <div class="google-info">
+      <p style="cursor: pointer" routerLink="/profile">{{ mongoEmail }}</p>
+
+      <button class="secondary-btn" (click)="handleSignOut()">Sign Out</button>
+    </div>
+    } @else {
+    <button class="primary-btn" routerLink="/sign-in">
       <img
         src="./assets/svg/user.svg"
         style="filter: invert(100%); padding-bottom: 4px"
       />
+      Sign In
     </button>
+    }
   </div>
 </nav>
-
-<!-- ////////////////////////////////////////////////////////// -->
-<!-- <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg text-white" style="background-color: transparent; ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-</div> -->
