--- a/src/app/Pages/sign-up/sign-up.component.scss
+++ b/src/app/Pages/sign-up/sign-up.component.scss
@@ -118,14 +118,18 @@ h1 {
 .form-footer {
   font-size: 1.4rem;
   margin-top: 28px;
-}
 
-.form-footer a {
-  font-weight: 600;
-  font-size: 1.4rem;
-  color: #fff;
-  text-decoration: none;
-  margin-left: 8px;
+  p {
+    font-size: 1.4rem;
+  }
+
+  a {
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: #fff;
+    text-decoration: none;
+    margin-left: 8px;
+  }
 }
 
 .second-column {
