--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,7 @@ body {
   background-color: var(--color-var1);
   color: var(--color-var2);
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  border: 1px solid var(--color-var2);
 }
 
 .secondary-btn:hover {
